# libpalindrome

./: CMakeLists.txt  Doxyfile  README.md  conanfile.txt
cmake/Modules/: ECMEnableSanitizers.cmake
src/: fibonacci.h  main.cpp
test/: test.cpp
toolchain/: Dockerfile  build.sh
